fix ReverseSortedArray.java