@@ -3,6 +3,8 @@ package com.azelentsov.sortVisualisator.Core.arrayGenerator;
 import com.azelentsov.sortVisualisator.Core.records.ArrayElement;
 import org.springframework.stereotype.Component;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Component
@@ -13,7 +15,7 @@ public class ReverseSortedArray extends ArrayGenerator{
         for (int i = size-1; i >= 0; i--) {
             result[i] = new ArrayElement(i,size - i);
         }
-        return List.of(result);
+        return new ArrayList<>(Arrays.asList(result));
     }
 
 }
